--- a/templates/email.html
+++ b/templates/email.html
@@ -12,5 +12,7 @@
     <br>
     <h4>turds of code:</h4>
     <a href="https://github.com/f41lure">github</a>
-
-{% endblock %}
+    <br>
+    <br><br><br>
+    <iframe src="https://discordapp.com/widget?id=617472968582234118&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+{%endblock%}
