new(small) features

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,13 +7,10 @@
 {% block main %}
     <form action="{{ url_for('about') }}" method="post">
         <fieldset>
-        <pre class="textbox" name="entry">
-Welcome to this shitty little blog of mine. Over here you'll find the dumbest shit you've ever
+        <p class="textbox" name="entry">
+Welcome to this shitty little shit of mine. Over here you'll find the dumbest shit you've ever
 seen. Get the fuck out if you don't like it. Yes it's a shitty site. Yeah it's extremely useless.
-Yes it has a million security holes and bugs. But I wrote it, and I wrote it in flask. So suck
-my tiny peen. SQL inject this shit idgaf. I've already acknowledged that I'm nothing but a
-worthless piece of shit. btw I'm a 14 year old retard/edgelord from terrorist-streetshitter land who
-likes to listen to Linkin Park</pre>
+Yes it has a million security holes and bugs. Suck my tiny peen. SQL inject this shit idk. </p>
         <button class="btn btn-primary" type="submit">Go Back</button>
         </fieldset>
     </form>
