--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,11 +6,16 @@
 
 {% block main %}
 
-    <h2>Yes master?</h2>
+    <h2>Who are you kidding?</h2>
     <br><br>
-    <h4>Wanna kill some fags? No problem.</h4>
-    <p>after all, retards like you can get high on shitty online victories right here</p>
+    <h4>Wanna ban some fags? No problem.</h4>
+    <p>remember that time you banned yourself</p>
     <h5><a href="{{ url_for('ban') }}">ban</a></h5>
     <br>
+    <h4>Wanna kill some fags? No problem.</h4>
+    <p>just off yourself already</p>
+    <h5><a href="{{ url_for('kill') }}">ban</a></h5>
+    <br>
+    <h5><a href="{{ url_for('bulk') }}">bulk delete posts</a></h5>
 
 {% endblock %}
