--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,21 +1,19 @@
 {% extends "layout.html" %}
-
 {% block title %}
-    Delete
+    Vengeance
 {% endblock %}
 
 {% block main %}
-    <h1>Enter the name of the blog entry to delete.</h1>
-    <form action="{{ url_for('delete') }}" method="post">
+
+    <form action="{{ url_for('kill') }}" method="post">
         <fieldset>
+            <p>bye-bye!</p>
+            <div class="form-group">
+                <input class="form-control" name="user" placeholder="Infidel to behead" type="text"/>
             </div>
             <div class="form-group">
-                <input class="form-control" name="f" placeholder="Please be sure to include the '.txt' part and exact capitals and symbols." type={{file}}/>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-default" type="submit">Delete</button>
+                <button class="btn btn-default" type="submit">yayeet</button>
             </div>
         </fieldset>
     </form>
-
 {% endblock %}
