--- a/templates/register.html
+++ b/templates/register.html
@@ -23,4 +23,10 @@
             </div>
         </fieldset>
     </form>
+    <h5>Honestly stop bitching about making an account. How'll you make posts without one?</h5>
+    <p>And then there's some of you who think I can steal your password. No, I can't.
+    Your passwords are hashed when stored, which means that they are turned into unrecognizable gibberish
+    that no human can understand. Neither can the hashed gibberish be turned back into the actual shit, even
+    with a computer. On the other hand, I can see your email address if I go so far as to looking for it in
+    the database, but then again why would I waste time on that?</p>
 {% endblock %}
