--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,150 +11,37 @@
         <!-- documentation at http://getbootstrap.com/docs/4.0/, alternative themes at https://bootswatch.com/4-alpha/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
 
-        <!--<link href="styles.css" rel="stylesheet"/>-->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://i.ibb.co/kGTwWgQ/Logo-Makr-4-Xc15e.png" sizes="32x32" />
+        {{ moment.include_jquery() }}
+        {{ moment.include_moment() }}
+
+        <!--<link href="https://dl.dropbox.com/s/98r7aitq78zfclr/common.css" rel="stylesheet"/>-->
+        <link rel="stylesheet" type="text/css" href="https://dl.dropbox.com/s/98r7aitq78zfclr/common.css" title="default">
+        <link rel="alternate stylesheet" type="text/css" href="https://dl.dropbox.com/s/4tzsq74htbw12dh/night.css" title="alternate">
+        <link rel="alternate stylesheet" type="text/css" href="https://dl.dropbox.com/s/wq0rx3dxfkaxce5/dark.css" title="alternate2">
+        <link rel="icon" type="image/png" href="https://i.ibb.co/YkRGFQB/Logo-Makr-3y-GIxd.png" sizes="32x32" />
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
+        <script type="text/javascript" src="https://alistapart.github.io/code-samples/alternate/styleswitcher.js"></script>
         <title>8depr: {% block title %}{% endblock %}</title>
-        <style>
-            body {
-                background-color: #FFF5EE;
-            }
-            head
-            {
-                background-color: #663399;
-            }
-            nav .navbar-brand
-            {
-                /* size for brand */
-                font-size: xx-large;
-                background-color: #000000;
-            }
 
-            /*p, h5, h6, pre{
-                font-family: 'Open Sans', sans-serif;
-            }*/
-
-            /*h1, h2, h3, h4{
-                font-family: "Arial Black";
-            }*/
-
-            /* colors for brand */
-            nav .navbar-brand .blue
-            {
-                color: #537fbe;
-            }
-            nav .navbar-brand .red
-            {
-                color: #ea433b;
-            }
-            nav .navbar-brand .yellow
-            {
-                color: #f5b82e;
-            }
-            nav .navbar-brand .green
-            {
-                color: #2e944b;
-            }
-
-            /*main .form-control
-            {
-                center form controls
-                display: inline-block;
-
-                 override Bootstrap's 100% width for form controls
-                width: auto;
-            }*/
-
-            /*main
-            {
-                * scroll horizontally as needed
-                overflow-x: auto;
-
-                * center contents
-                text-align: center;
-            }*/
-
-            input[type=button]{
-                display: inline-block;
-                font-weight: 400;
-                text-align: center;
-                white-space: nowrap;
-                vertical-align: middle;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
-                border: 1px solid transparent;
-                padding: .375rem .75rem;
-                font-size: 1rem;
-                line-height: 1;
-                border-radius: 1rem;
-                background-color: orange;
-                transition: all 150ms ease-out;
-            }
-            input[type=button]:focus, input[type=button]:hover{
-			    color: orange;
-			    background-color: black;
-            }
-
-            input[type=button]:active{
-			    color: black;
-			    background-color: white;
-            }
-
-            main img
-            {
-                /* constrain images on small screens */
-                max-width: 100%;
-            }
-
-            textarea {
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    color: #495057;
-    background-color: #fff;
-    background-image: none;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-            }
-
-
-            textarea:focus {
-                background: none repeat scroll 0 0 #FFFFFF;
-                outline-width: 0;
-            }
-
-            #sort{
-
-                text-align: center;
-            }
-            input[value=profile]{
-                float: right;
-            }
-            input[value=new], input[value=old], p[value=p]{
-                float: left;
-                display: flex;
-            }
-            #navbar{
-                color: #000000;
-            }
-            p[value=p]{
-                margin-right: 1;
-            }
-        </style>
     </head>
 
-    <body>
+    <style>
+        footer{
+            background-color:#26272b;
+            /*padding:45px 0 25px;*/
+            font-size:15px;
+            /*line-height:10px;*/
+            color:#737373;
+        }
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light border" id="navshit">
+    </style>
+
+    <body>
+        <div id="page-container">
+            <div id="content-wrap">
+        <nav class="navbar navbar-expand-md  border" id="navshit">
             <a class="navbar-brand" href="/"><span class="yellow">The Realm of</span><span class="red"> 8depr</span><span class="blue"></span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -162,21 +49,63 @@
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/new_entry">new post</a></li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            new post
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/new/text">text</a>
+                            <a class="dropdown-item" href="/new/img">image</a>
+                        </div>
+
                         <li class="nav-item"><a class="nav-link" href="/email">HYPERlinks</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/about">click here</a></li>
                         <li class="nav-item"><a class="nav-link" href="/users">retard list</a></li>
 
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            extra shit
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/about">info</a>
+                            <a class="dropdown-item" href="/history">more info</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('default'); return false;">Light mode</a>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('alternate'); return false;">Night mode</a>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('alternate2'); return false;">Dark mode</a>
+                        </div>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         {% if session.perms == "admin" %}
                             <li class="nav-item"><a class="nav-link" href="/admin">admin panel</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/prefs">preferences</a></li>
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link" href="/prefs">preferences</a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" href="/logout">log out</a></li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">landing</a></li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            new post
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/new/text">text</a>
+                            <a class="dropdown-item" href="/new/img">image</a>
+                        </div>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            extra shit
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/about">info</a>
+                            <a class="dropdown-item" href="/history">more info</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('default'); return false;">Light mode</a>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('alternate'); return false;">Night mode</a>
+                            <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('alternate2'); return false;">Dark mode</a>
+                        </div>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/register">sign up to do other shit</a></li>
@@ -185,8 +114,10 @@
                 {% endif %}
             </div>
         </nav>
-
-
+<!--<div class="sidenav panel panel-default">
+  <div class="panel-heading">themes</div>
+  <div class="panel-body">Panel Content</div>
+</div>-->
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary border text-center" role="alert">
@@ -197,7 +128,10 @@
 
         <main class="container p-5">
             {% block main %}{% endblock %}
-        </main>
+        </main></div>
+    </div>
     </body>
+
+
 
 </html>
