--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,26 +6,37 @@
 
 {% block main %}
     <h2>User {{ username }}</h2><br>
-    <h6>last seen {{  data[0][6]  }}</h6>
-    <h6>joined on {{  data[0][5]  }}</h6>
-    <br>
-    <img src={{data[0][9]}} alt="welp" width='52' height='52'>
-    <h5>About:<br>{{ bio }}</h5>
-
     {% if username == curr_username %}
         <a href="/edit"><input type="button" value="Edit"></a>
     {% endif %}
     {% if username != curr_username %}
         <a href="{{url_for('message', from=curr_username, to=username)}}">Talk</a>
     {% endif %}
+
+    {% if data[0][6] != None %}
+        <h6>last seen {{  moment(data[0][6]).format('MMMM Do YYYY, h:mm:ss a')  }}</h6>
+    {% endif %}
+    <h6>joined on {{  moment(data[0][5]).format('MMMM Do YYYY, h:mm:ss a')  }}</h6>
+
+    <img src={{data[0][9]}} alt="welp" width=20 style="height: auto; width: 20%;">
+    {% if not not bio %}
+        <h6>About:<br>{{ bio }}</h5>
+    {% else %}
+        <h6>This person hasn't made a bio yet</h6>
+    {% endif %}
+
+
     <br><br>
   <h3><pre>This user's posts:
 </pre></h3>
     {% for i in range(posts.__len__()) %}
-        <td><a href="{{url_for('open_file', type=(posts[i][4]))}}">{{ posts[i][2] }}</a></td>
-        <br>
-        <td>{{ (posts[i][3])[0:30] ~ '...' }}</td>
-        <br>
+        {% if posts[i][2] %}
+            <td><a href="{{url_for('open_file', type=(posts[i][4]))}}">{{ posts[i][2] }}</a></td>
+        {% else %}
+            <td><a href="{{url_for('open_file', type=(posts[i][4]))}}">Dumbass didn't choose a title.</a></td>
+        {% endif %}
+         <br>
+        <h6>{{ (posts[i][3])[0:30] ~ '...' }}</h6>
     {% endfor %}
 
 {% endblock %}
