--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,7 +14,7 @@
     <br>
     <h4>Wanna kill some fags? No problem.</h4>
     <p>just off yourself already</p>
-    <h5><a href="{{ url_for('kill') }}">ban</a></h5>
+    <h5><a href="{{ url_for('kill') }}">kill</a></h5>
     <br>
     <h5><a href="{{ url_for('bulk') }}">bulk delete posts</a></h5>
 
