--- a/templates/layout.html
+++ b/templates/layout.html
@@ -58,6 +58,7 @@
                             <a class="dropdown-item" href="/new/img">image</a>
                         </div>
 
+                        <li class="nav-item"><a class="nav-link" href="/wiki/self">wiki/store</a></li>
                         <li class="nav-item"><a class="nav-link" href="/email">HYPERlinks</a></li>
                         <li class="nav-item"><a class="nav-link" href="/users">retard list</a></li>
 
