--- a/templates/prefs.html
+++ b/templates/prefs.html
@@ -11,4 +11,21 @@
           <button name='button' type='submit' value="delete">delete account</button>
     </form>
 
+    <br><br>
+    <h5>change password</h5>
+
+    <form action="{{ url_for('prefs') }}" method="post">
+        <fieldset>
+            <div class="form-group">
+                <input class="form-control" name="opassword" placeholder="old password" type="text"/>
+            </div>
+            <div class="form-group">
+                <input class="form-control" name="npassword" placeholder="new password" type="text"/>
+            </div>
+            <div class="form-group">
+                <button name='button' type='submit' value="cpassword">change password</button>
+            </div>
+        </fieldset>
+    </form>
+
 {% endblock %}
