--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             height: auto;
         }
     </style>
-    <p style="color: red;">development on hold for this weekend!</p>
+    <p style="color: red;">{{banner}}</p>
     <form action="{{ url_for('index') }}" method="post"><div style=" display:flex;">
         <input class="form-control" name="tag" placeholder="Tag (optional)" type="text"/>&nbsp;<button class="btn btn-default" type="submit" name="qtag" value="qtag">search</button>
         </div>
