--- a/templates/new_entry.html
+++ b/templates/new_entry.html
@@ -29,7 +29,10 @@
                 <label>anonymous <input type="checkbox" name="opt" value="isanon"></label>
             </div>
             <div class="form-group" autocomplete="off">
-                <label>hidden <input type="checkbox" name="opt2" value="ishidden"></label>
+                <label>hidden <input type="checkbox" name="opt" value="ishidden"></label>
+            </div>
+            <div class="form-group" autocomplete="off">
+                <label>private domain <input type="checkbox" name="opt" value="isprivate"></label>
             </div>
             <div class="form-group">
                 <button class="btn btn-default" type="submit">Save</button>
