--- a/templates/layout.html
+++ b/templates/layout.html
@@ -84,6 +84,7 @@
                             <a class="dropdown-item" href="/about">info</a>
                             <a class="dropdown-item" href="/history">more info</a>
                             <a class="dropdown-item" href="/clips/yours">clipboard</a>
+                            <a class="dropdown-item" href="/stats">stats</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('default'); return false;">Light mode</a>
                             <a class="dropdown-item" href="#" onclick="setActiveStyleSheet('alternate'); return false;">Night mode</a>
