fixed messages and other stuffs

--- a/templates/message.html
+++ b/templates/message.html
@@ -7,7 +7,7 @@
 {% block main %}
     <form action="{{ url_for('message') }}" method="post">
             <div class="entrybox">
-                <textarea placeholder="say hi!" class="textbox" name="comment" style="height:40px;
+                <textarea placeholder="say hi!" class="textbox" name="body" style="height:100px;
                                                             font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
                                                             font-size: 100%;
                                                             overflow:scroll
